<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!--Insert the app logo here-->
        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/signup_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="Name" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/signup_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/signup_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"/>
        </android.support.design.widget.TextInputLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">

            <ToggleButton
                android:id="@+id/toggle_button1"
                android:textOn="@string/interests1"
                android:textOff="@string/interests1"
                />
            <ToggleButton
                android:id="@+id/toggle_button2"
                android:textOn="@string/interests2"
                android:textOff="@string/interests2"
                />
            <ToggleButton
                android:id="@+id/toggle_button3"
                android:textOn="@string/interests3"
                android:textOff="@string/interests3"
                />
            <ToggleButton
                android:id="@+id/toggle_button4"
                android:textOn="@string/interests4"
                android:textOff="@string/interests4"
                />
            <ToggleButton
                android:id="@+id/toggle_button5"
                android:textOn="@string/interests5"
                android:textOff="@string/interests5"
                />
            <ToggleButton
                android:id="@+id/toggle_button6"
                android:textOn="@string/interests6"
                android:textOff="@string/interests6"
                />
            <ToggleButton
                android:id="@+id/toggle_button7"
                android:textOn="@string/interests7"
                android:textOff="@string/interests7"
                />
            <ToggleButton
                android:id="@+id/toggle_button8"
                android:textOn="@string/interests8"
                android:textOff="@string/interests8"
                />
            <ToggleButton
                android:id="@+id/toggle_button9"
                android:textOn="@string/interests9"
                android:textOff="@string/interests9"
                />

        </GridLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Create Account"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Login"/>
    </LinearLayout>
</ScrollView>